Bug 349172 - Plasmoid pup-up dialogs are no longer closed when deselected
Summary: Plasmoid pup-up dialogs are no longer closed when deselected
Status: CLOSED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasmaquick (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-15 09:02 UTC by Raymond Wooninck
Modified: 2015-07-06 04:55 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.13
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raymond Wooninck 2015-06-15 09:02:14 UTC
Plasmoid pup-up dialogs are no longer automatically closed when they are no longer in focus. 

One could open the application menu (kicker) and then click on the desktop to de-focus the application menu. It will no longer close and it remains open until I click on the kicker icon.  The same is valid for all the plasmoids in the panel. (plasma-nm, systray, powerdevil, bluedevil, etc). However the kmix (placed in systray) pup-up dialog still behaves correctly.

It can happen that on the first click, the correct behavior is shown. However with subsequent openings of the pop-up dialog , the dialog can only be closed by clicking the plasmoid icon itself again. 

Reproducible: Always
Comment 1 Kai Uwe Broulik 2015-06-16 18:12:56 UTC
I can confirm this. Opening Kickoff or systray and then clicking the panel or desktop will not close the popup. Likewise for an applet on the desktop. Only focussing another application will.
Comment 2 Kai Uwe Broulik 2015-07-05 13:24:27 UTC
Git commit 5cf9c04ff5a6809bf67fa27c86f5393d1ba9d08b by Kai Uwe Broulik.
Committed on 05/07/2015 at 13:23.
Pushed by broulik into branch 'master'.

Also check for SharedEngineView

With the move to a shared QML engine infrastructure, the check for whether the
focus item is a View no longer held and thus Plasma dialogs stayed opened when
clicking the Desktop to dismiss them.

CHANGELOG: Dialogs like Kickoff now properly close when clicking the Desktop
REVIEW: 124260
FIXED-IN: 5.13

M  +5    -1    src/plasmaquick/dialog.cpp

http://commits.kde.org/plasma-framework/5cf9c04ff5a6809bf67fa27c86f5393d1ba9d08b
Comment 3 Raymond Wooninck 2015-07-06 04:55:15 UTC
Tried the latest snapshot and the issue has been resolved
Comment 4 Raymond Wooninck 2015-07-06 04:55:35 UTC
Closing the bug report now